# SmartCube

backend/: server.js
contracts/ai/: .binpath  Cargo.toml
contracts/ai/io/: Cargo.toml
contracts/ai/io/src/: lib.rs
contracts/ai/src/: lib.rs
contracts/client/: .binpath  Cargo.toml
contracts/client/io/: Cargo.toml
contracts/client/io/src/: lib.rs
contracts/client/src/: lib.rs
contracts/contract/: Cargo.toml
contracts/contract/src/: lib.rs
contracts/escrow/: .binpath  Cargo.toml
contracts/escrow/io/: Cargo.toml
contracts/escrow/io/src/: lib.rs
contracts/escrow/src/: lib.rs
frontend/: .env  package.json
frontend/src/: consts.ts
frontend/src/assets/wasm/: db.meta.wasm  index.ts
frontend/src/components/: index.ts
frontend/src/components/message-item/: MessageItem.tsx
frontend/src/pages/home/: Home.tsx
frontend/src/types/: index.ts
