[package]
name = "ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
circular_buffer = { git = "https://github.com/breathx/circular-buffer-rs.git", default-features = false }
gstd = { git = "https://github.com/gear-tech/gear.git", features = ["debug"], branch = "stable" }
ai_io = { path = "io"}
serde_json = { version = "1.0", default-features = false, features = ["alloc"]}
lazy_static = { version = "1.4.0", default-features = false, features = ["spin_no_std"]}




[dev-dependencies]
gtest = { git = "https://github.com/gear-tech/gear.git", branch = "stable" }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", branch = "stable"  }