[package]
name = "contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", features = ["debug"], branch = "stable" }
scale-info = { version = "2.2.0", default-features = false }
codec = { package = "parity-scale-codec", version = "3.2.1", default-features = false }
