[package]
name = "escrow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
circular_buffer = { git = "https://github.com/breathx/circular-buffer-rs.git", default-features = false }
gstd = { git = "https://github.com/gear-tech/gear.git", features = ["debug"], branch = "stable" }
ft-main-io = { git = "https://github.com/gear-dapps/sharded-fungible-token.git", tag = "0.1.2" }
ft-logic-io = { git = "https://github.com/gear-dapps/sharded-fungible-token.git", tag = "0.1.2" }
escrow_io = { path = "io"}

[dev-dependencies]
gtest = { git = "https://github.com/gear-tech/gear.git", branch = "stable" }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", branch = "stable"  }