[package]
name = "escrow_io"
version = "0.1.0"
edition = "2021"

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", branch = "stable" }
codec = { package = "parity-scale-codec", version = "3.2.1", default-features = false }
scale-info = { version = "2.2.0", default-features = false }
primitive-types = { version = "0.12.1", default-features = false, features = ["scale-info"] }
contract = {path = "../../contract"}
